fixed some layout issues in right column

--- a/src/client/ondemand.styl
+++ b/src/client/ondemand.styl
@@ -10,7 +10,7 @@
 
     color: #eee;
   .movie-info {
-    * {
+    .movie-info-item {
       margin-bottom: 10px;
     }
   }
